# EDD_JuegoUNO

./: CMakeLists.txt  main.cpp
documentacion/: Diagrama UML.drawio  MANUAL DE USUARIO.docx  TAD.docx  ~$TAD.docx
include/entity/: Card.h  Player.h
include/logic/: Game.h  GameSettings.h  GeneratorDeck.h  Rules.h
include/structure/: DCircularList.h  DLinkedList.h  Stack.h
include/utils/: ConsoleColors.h
include/view/: GameUI.h
src/entity/: Player.cpp
src/logic/: Game.cpp  GameSettings.cpp  GeneratorDeck.cpp  Rules.cpp
src/structure/: DCircularList.cpp  DLinkedList.cpp  Stack.cpp
src/view/: GameUI.cpp
